--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -139,6 +139,7 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
     splits {
         abi {
@@ -219,6 +220,9 @@ dependencies {
     } else {
         implementation jscFlavor
     }
+
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'androidx.multidex:multidex:2.0.1' // Multidex
 }
 
 // Run this once to be able to run the application with BUCK
@@ -229,3 +233,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply plugin: 'com.google.gms.google-services'
