--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-native-community/netinfo": "^5.7.1",
     "@react-native-firebase/app": "^6.4.0",
     "@react-native-firebase/auth": "^6.4.0",
+    "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
     "react": "16.11.0",
