--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "android:dev": "react-native run-android",
     "gradlew:clean": "cd android && ./gradlew clean && cd ..",
     "ios:dev": "react-native run-ios",
-    "start": "react-native start",
+    "start": "react-native start --port=1148",
     "test": "jest",
     "lint": "eslint ."
   },
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
+    "moment": "^2.24.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-fbsdk": "^1.1.2",
@@ -34,6 +35,7 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "yup": "^0.28.3"
   },
   "devDependencies": {
