--- a/ios/Kebetoo/Info.plist
+++ b/ios/Kebetoo/Info.plist
@@ -71,6 +71,8 @@
 		<string>Octicons.ttf</string>
 		<string>SimpleLineIcons.ttf</string>
 		<string>Zocial.ttf</string>
+		<string>Kebeticons.ttf</string>
+		<string>icomoon.ttf</string>
 	</array>
 </dict>
 </plist>
