--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "rn-placeholder": "^3.0.0",
     "yup": "^0.28.3"
   },
   "devDependencies": {
