--- a/ios/Podfile
+++ b/ios/Podfile
@@ -77,6 +77,10 @@ target 'Kebetoo' do
   pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
+  # react-native-permissions
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-Microphone', :path => "#{permissions_path}/Microphone.podspec"
+
   target 'KebetooTests' do
     inherit! :complete
     # Pods for testing
