--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 16
+        minSdkVersion = 19 // corresponds to android 4.4 (kitkat)
         compileSdkVersion = 28
         targetSdkVersion = 28
         googlePlayServicesAuthVersion = "18.0.0"
