--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@expo/react-native-action-sheet": "^3.6.0",
     "@react-native-community/async-storage": "^1.9.0",
+    "@react-native-community/audio-toolkit": "^2.0.3",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.8",
     "@react-native-community/netinfo": "^5.7.1",
@@ -30,6 +31,7 @@
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-localization": "^2.1.6",
+    "react-native-permissions": "^2.1.4",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
