--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-splash-screen": "^3.2.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/runtime": "^7.9.2",
+    "@bam.tech/react-native-make": "^3.0.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@react-native-community/eslint-config": "^1.0.0",
