--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "normalizr": "^3.6.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-bootsplash": "^2.2.4",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-localization": "^2.1.6",
@@ -35,7 +36,6 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
-    "react-native-splash-screen": "^3.2.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
