--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "rn-fetch-blob": "^0.12.0",
     "rn-placeholder": "^3.0.0",
     "yup": "^0.28.3"
   },
