--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@react-navigation/bottom-tabs": "^5.2.7",
     "@react-navigation/native": "^5.1.5",
     "@react-navigation/stack": "^5.2.10",
-    "moment": "^2.24.0",
+    "dayjs": "^1.8.27",
     "normalizr": "^3.6.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
