feat: add an actionbutton to add post from manage_post page

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "normalizr": "^3.6.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-action-button": "^2.8.5",
     "react-native-bootsplash": "^2.2.4",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
