--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-bootsplash": "^2.2.4",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-image-picker": "^2.3.1",
     "react-native-localization": "^2.1.6",
     "react-native-permissions": "^2.1.4",
     "react-native-reanimated": "^1.8.0",
