--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,7 +81,14 @@ project.ext.react = [
     enableHermes: true,  // clean and rebuild if changing
 ]
 
+project.ext.vectoricons = [
+    iconFontsDir: '../../assets/fonts',              // Icons location
+    iconFontNames: [ 'Ionicons.ttf', 'icomoon.ttf' ] // Name of the font files you want to copy
+]
+
 apply from: "../../node_modules/react-native/react.gradle"
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
