--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-localization": "^2.1.6",
     "react-native-permissions": "^2.1.4",
     "react-native-reanimated": "^1.8.0",
+    "react-native-receive-sharing-intent": "^1.0.3",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
     "react-native-swiper": "^1.6.0-rc.3",
