--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-receive-sharing-intent": "^1.0.3",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.4.0",
+    "react-native-sound": "^0.11.0",
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
