--- a/package.json
+++ b/package.json
@@ -58,8 +58,9 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@react-native-community/eslint-config": "^1.0.0",
     "@welldone-software/why-did-you-render": "^4.2.5",
+    "babel-eslint": "^10.1.0",
     "babel-jest": "^25.3.0",
-    "eslint": "^5.16.0 || ^6.8.0",
+    "eslint": "^7.3.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
