--- a/package.json
+++ b/package.json
@@ -70,15 +70,7 @@
     "jest": "^25.3.0",
     "metro-react-native-babel-preset": "^0.59.0",
     "react-native-testing-library": "^2.1.0",
-    "react-test-renderer": "16.11.0"
-  },
-  "jest": {
-    "preset": "react-native",
-    "setupFiles": [
-      "./src/config/jest-setup.js"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/"
-    ]
-  }
+    "react-test-renderer": "16.11.0",
+    "redux-mock-store": "^1.5.4"
+  } 
 }
