--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "gradlew:clean": "cd android && ./gradlew clean && cd ..",
     "ios:dev": "react-native run-ios",
     "start": "react-native start --port=1148",
-    "test": "jest",
+    "test": "jest src --silent",
     "lint": "eslint ."
   },
   "dependencies": {
