--- a/package.json
+++ b/package.json
@@ -69,8 +69,9 @@
     "husky": "^4.2.5",
     "jest": "^25.3.0",
     "metro-react-native-babel-preset": "^0.59.0",
+    "mockdate": "^3.0.2",
     "react-native-testing-library": "^2.1.0",
     "react-test-renderer": "16.11.0",
     "redux-mock-store": "^1.5.4"
-  } 
+  }
 }
