--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "react-native start --port=1148",
     "test": "jest",
     "lint": "eslint .",
-    "coverage": "yarn test src --coverage",
-    "codecov": "yarn coverage && bash <(curl -s https://codecov.io/bash) -t @.cc_token"
+    "coverage": "yarn test src --coverage"
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^3.6.0",
