--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-screens": "^2.4.0",
     "react-native-sound": "^0.11.0",
     "react-native-swiper": "^1.6.0-rc.3",
+    "react-native-typography": "^1.4.1",
     "react-native-vector-icons": "^6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
