--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
     "react-native-localization": "^2.1.6",
+    "react-native-navigation-bar-color": "^2.0.1",
     "react-native-permissions": "^2.1.4",
     "react-native-reanimated": "^1.8.0",
     "react-native-receive-sharing-intent": "^1.0.3",
