test: add missing tests

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "react-native start --port=1148",
     "test": "jest",
     "lint": "eslint .",
-    "coverage": "yarn test src --coverage"
+    "coverage": "yarn test src --coverage --silent"
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^3.6.0",
