--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,7 +13,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
-  coverage:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -35,6 +35,5 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           directory: ./coverage
-          file: ./clover.xml
           fail_ci_if_error: false
       
