--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "dayjs": "^1.8.27",
+    "emoji-datasource": "^5.0.1",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-action-button": "^2.8.5",
@@ -48,6 +49,7 @@
     "react-native-swiper": "^1.6.0-rc.3",
     "react-native-tab-view": "^2.14.4",
     "react-native-typography": "^1.4.1",
+    "react-native-ui-lib": "^5.14.0",
     "react-native-vector-icons": "6.6.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
