--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.8",
     "@react-native-community/netinfo": "^5.7.1",
-    "@react-native-firebase/app": "^8.4.1",
+    "@react-native-firebase/analytics": "^7.6.4",
+    "@react-native-firebase/app": "^8.4.3",
     "@react-native-firebase/auth": "^9.1.2",
+    "@react-native-firebase/crashlytics": "^8.4.5",
     "@react-native-firebase/messaging": "^7.8.3",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/material-top-tabs": "^5.2.12",
@@ -32,6 +34,7 @@
     "react-native": "0.62.2",
     "react-native-action-button": "^2.8.5",
     "react-native-bootsplash": "^2.2.4",
+    "react-native-device-info": "^6.0.4",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
