--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@react-native-community/eslint-config": "^1.0.0",
+    "@testing-library/react-hooks": "^3.4.1",
     "@welldone-software/why-did-you-render": "^4.2.5",
     "babel-jest": "^25.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
