--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.8",
     "@react-native-community/netinfo": "^5.7.1",
+    "@react-native-community/push-notification-ios": "^1.6.1",
     "@react-native-firebase/analytics": "^7.6.4",
     "@react-native-firebase/app": "^8.4.3",
     "@react-native-firebase/auth": "^9.1.2",
@@ -31,8 +32,8 @@
     "@react-navigation/stack": "^5.9.0",
     "dayjs": "^1.8.27",
     "emoji-datasource": "^5.0.1",
-    "react": "16.11.0",
-    "react-native": "0.62.2",
+    "react": "16.13.1",
+    "react-native": "0.63.3",
     "react-native-action-button": "^2.8.5",
     "react-native-bootsplash": "^2.2.4",
     "react-native-device-info": "^6.0.4",
@@ -50,7 +51,7 @@
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.4.0",
     "react-native-sound": "^0.11.0",
-    "react-native-swiper": "^1.6.0-rc.3",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-typography": "^1.4.1",
     "react-native-ui-lib": "^5.14.0",
