--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "16.13.1",
     "react-native": "0.63.3",
     "react-native-action-button": "^2.8.5",
+    "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "^2.2.4",
     "react-native-device-info": "^6.0.4",
     "react-native-fbsdk": "^1.1.2",
