--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "^2.2.4",
     "react-native-device-info": "^6.0.4",
+    "react-native-dotenv": "^2.4.2",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-picker": "^2.3.1",
