--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-typography": "^1.4.1",
     "react-native-ui-lib": "^5.14.0",
     "react-native-vector-icons": "6.6.0",
+    "react-native-view-more-text": "^2.1.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
