--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   },
   "dependencies": {
     "@expo/react-native-action-sheet": "^3.6.0",
+    "@kebetoo/camera-roll-picker": "^1.0.3",
     "@react-native-community/async-storage": "^1.9.0",
     "@react-native-community/audio-toolkit": "^2.0.3",
+    "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "^0.1.8",
     "@react-native-community/netinfo": "^5.7.1",
@@ -41,7 +43,7 @@
     "react-native-dotenv": "^2.4.2",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
-    "react-native-image-picker": "^2.3.1",
+    "react-native-image-crop-picker": "^0.35.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-localization": "^2.1.6",
     "react-native-navigation-bar-color": "^2.0.1",
