--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -224,6 +224,9 @@ dependencies {
 
     implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     implementation 'androidx.multidex:multidex:2.0.1' // Multidex
+
+    // For animated GIF support
+    implementation 'com.facebook.fresco:animated-gif:2.0.0'
 }
 
 // Run this once to be able to run the application with BUCK
