--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
           <data android:mimeType="text/plain" />
           <data android:mimeType="image/*" />
           <data android:mimeType="audio/*" />
+          <data android:mimeType="video/*" />
         </intent-filter>
       </activity>
       <activity
