--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-image-crop-picker": "^0.35.2",
+    "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-localization": "^2.1.6",
     "react-native-navigation-bar-color": "^2.0.1",
