--- a/package.json
+++ b/package.json
@@ -52,9 +52,9 @@
     "react-native-popover-view": "^3.0.3",
     "react-native-push-notification": "^5.1.0",
     "react-native-reanimated": "^1.8.0",
-    "react-native-receive-sharing-intent": "^1.0.3",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.4.0",
+    "react-native-share-menu": "^5.0.2",
     "react-native-snackbar": "^2.3.0",
     "react-native-sound": "^0.11.0",
     "react-native-swiper": "^1.6.0",
