--- a/ios/Kebetoo/Info.plist
+++ b/ios/Kebetoo/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>0.0.4</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -70,24 +70,24 @@
 		<string>fbshareextension</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>LSRequiresIPhoneOS</key>
-	<true/>
+	<true />
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<true/>
+		<true />
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true/>
+				<true />
 			</dict>
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string />
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app requires access to your microphone</string>
 	<key>UIAppFonts</key>
@@ -110,8 +110,8 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<false/>
-		<key>NSPhotoLibraryUsageDescription</key>
+	<false />
+	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Kebetoo would like to select photos from your camera roll.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Kebetoo will need access to your camera roll to cache images.</string>
