--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -163,6 +163,14 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release {
+            if (project.hasProperty('KEBETOO_UPLOAD_STORE_FILE')) {
+                storeFile file(KEBETOO_UPLOAD_STORE_FILE)
+                storePassword KEBETOO_UPLOAD_STORE_PASSWORD
+                keyAlias KEBETOO_UPLOAD_KEY_ALIAS
+                keyPassword KEBETOO_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
@@ -171,7 +179,7 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             shrinkResources enableShrinkResourcesInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
