--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,9 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.54.0
+
+# Signing
+KEBETOO_UPLOAD_STORE_FILE=kebetoo.keystore
+KEBETOO_UPLOAD_KEY_ALIAS=Kebetoo
+KEBETOO_UPLOAD_STORE_PASSWORD=K3bet0o!
+KEBETOO_UPLOAD_KEY_PASSWORD=K3bet0o!
