fix(ios): fix ios release build

--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "android:dev": "react-native run-android",
     "android:tcp": "adb reverse tcp:8081 tcp:8081 && adb reverse tcp:1337 tcp:1337 && adb reverse tcp:4569 tcp:4569",
     "android:cast": "scrcpy -m 1080 -T",
+    "android:build": "react-native run-android --variant=release",
     "gradlew:clean": "cd android && ./gradlew clean && cd ..",
     "ios:dev": "cd ios && pod install && cd .. && react-native run-ios",
+    "ios:build": "cd ios && pod install && cd .. && react-native run-ios --configuration Release",
     "develop": "react-native start",
     "test": "jest",
     "lint": "eslint .",
