--- a/ios/Kebetoo/Info.plist
+++ b/ios/Kebetoo/Info.plist
@@ -48,7 +48,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>14</string>
+	<string>11</string>
 	<key>FacebookAppID</key>
 	<string>869081526922862</string>
 	<key>FacebookDisplayName</key>
@@ -72,17 +72,17 @@
 		<string>fbshareextension</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
-	<true />
+	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<true />
+		<true/>
 		<key>NSExceptionDomains</key>
 		<dict>
 			<key>localhost</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<true />
+				<true/>
 			</dict>
 		</dict>
 	</dict>
@@ -91,7 +91,7 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>Kebetoo will need access to your microphone to record audio.</string>
+	<string>This app requires access to your microphone</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Kebetoo will need access to your camera roll to cache images.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
