--- a/ios/Kebetoo/Info.plist
+++ b/ios/Kebetoo/Info.plist
@@ -86,10 +86,6 @@
 			</dict>
 		</dict>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string />
-	<key>NSMicrophoneUsageDescription</key>
-	<string>This app requires access to your microphone</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Ionicons.ttf</string>
@@ -111,6 +107,12 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false />
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string />
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Kebetoo will need access to your microphone to record audio.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Kebetoo will need access to your camera to take photos.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Kebetoo would like to select photos from your camera roll.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
