--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@react-native-community/masked-view": "^0.1.8",
     "@react-native-community/netinfo": "^5.7.1",
     "@react-native-community/push-notification-ios": "^1.6.1",
-    "@react-native-firebase/analytics": "^7.6.4",
-    "@react-native-firebase/app": "^8.4.3",
-    "@react-native-firebase/auth": "^9.1.2",
-    "@react-native-firebase/crashlytics": "^8.4.5",
-    "@react-native-firebase/messaging": "^7.8.3",
+    "@react-native-firebase/analytics": "<10.0.0",
+    "@react-native-firebase/app": "^8.4.7",
+    "@react-native-firebase/auth": "<10.0.0",
+    "@react-native-firebase/crashlytics": "<10.0.0",
+    "@react-native-firebase/messaging": "<10.0.0",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
