--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "^3.1.2",
+    "react-native-convert-ph-asset": "^1.0.3",
     "react-native-device-info": "^6.0.4",
     "react-native-dotenv": "^2.4.2",
     "react-native-fbsdk": "^1.1.2",
