--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
       <meta-data
         android:name="com.google.firebase.messaging.default_notification_icon"
         android:resource="@drawable/ic_stat_ic_notification" />
+      <meta-data  
+        android:name="com.dieam.reactnativepushnotification.notification_color"
+        android:resource="@color/notification_color"
+      />
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
