--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "react-native-tab-view": "^2.14.4",
     "react-native-typography": "^1.4.1",
     "react-native-ui-lib": "^5.14.0",
-    "react-native-vector-icons": "6.6.0",
+    "react-native-vector-icons": "^8.0.0",
     "react-native-video": "^5.1.0-alpha8",
     "react-native-video-controls": "^2.7.1",
     "react-native-view-more-text": "^2.1.0",
