--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@react-native-firebase/app": "^8.4.7",
     "@react-native-firebase/auth": "<10.0.0",
     "@react-native-firebase/crashlytics": "<10.0.0",
+    "@react-native-firebase/database": "<10.0.0",
     "@react-native-firebase/messaging": "<10.0.0",
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
