--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-dotenv": "^2.4.2",
     "react-native-fbsdk": "^1.1.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.35.2",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
