--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "redux-saga": "^1.1.3",
     "rn-fetch-blob": "^0.12.0",
     "rn-placeholder": "^3.0.0",
+    "twitter-text": "^3.1.0",
     "yup": "^0.28.3"
   },
   "devDependencies": {
