--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.35.2",
+    "react-native-image-pan-zoom": "^2.1.12",
     "react-native-iphone-x-helper": "^1.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-localization": "^2.1.6",
