--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.2",
     "react-native-localization": "^2.1.6",
     "react-native-navigation-bar-color": "^2.0.1",
+    "react-native-parsed-text": "^0.0.22",
     "react-native-permissions": "^2.1.4",
     "react-native-popover-view": "^3.0.3",
     "react-native-push-notification": "^7.1.1",
