fix: set IPHONEOS_DEPLOYMENT_TARGET to 9.0

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -17,6 +17,7 @@ target 'Kebetoo' do
   post_install do |installer|
     flipper_post_install(installer)
     react_native_share_menu_post_install(installer)
+    iphoneos_post_install(installer)
   end
 end
 
