feat: install react-native-ffmpeg

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,11 +4,10 @@ require_relative './kebetoo_pods'
 
 platform :ios, '10.0'
 target 'Kebetoo' do
-  config = use_native_modules!
-  use_react_native!(:path => config["reactNativePath"])
-
   use_kebetoo_pods!
 
+  config = use_native_modules!
+  use_react_native!(:path => config['reactNativePath'])
   # Enables Flipper.
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
