--- a/android/build.gradle
+++ b/android/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         compileSdkVersion = 29
         targetSdkVersion = 29
         googlePlayServicesAuthVersion = "18.0.0"
+        reactNativeFFmpegPackage = "full-lts"
     }
     repositories {
         google()
