--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-device-info": "^8.0.7",
     "react-native-dotenv": "^2.5.3",
     "react-native-fbsdk": "^1.1.2",
+    "react-native-ffmpeg": "^0.5.1",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-image-crop-picker": "^0.36.0",
