--- a/ios/Podfile
+++ b/ios/Podfile
@@ -22,7 +22,5 @@ end
 
 target 'ShareExtension' do
   use_react_native!
-
-  pod 'RNShareMenu', :path => '../node_modules/react-native-share-menu'
-  # Manually link packages here to keep your extension bundle size minimal
+  use_kebetoo_share_extensions_pods!
 end
