--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "postversion": "react-native-version"
   },
   "dependencies": {
+    "@adrianso/react-native-device-brightness": "^1.2.4",
     "@expo/react-native-action-sheet": "^3.9.0",
+    "@gorhom/bottom-sheet": "^2",
     "@kebetoo/camera-roll-picker": "^1.0.7",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/audio-toolkit": "^2.0.3",
@@ -44,6 +46,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-background-timer": "^2.4.1",
     "react-native-bootsplash": "^3.2.0",
+    "react-native-camera": "^3.43.6",
     "react-native-convert-ph-asset": "^1.0.3",
     "react-native-device-info": "^8.0.7",
     "react-native-dotenv": "^2.5.3",
@@ -57,6 +60,7 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-localization": "^2.1.6",
     "react-native-navigation-bar-color": "^2.0.1",
+    "react-native-pager-view": "^5.1.3",
     "react-native-parsed-text": "^0.0.22",
     "react-native-permissions": "^3.0.1",
     "react-native-popover-view": "^3.1.1",
@@ -75,6 +79,8 @@
     "react-native-video": "^5.1.1",
     "react-native-video-controls": "^2.7.1",
     "react-native-view-more-text": "^2.1.0",
+    "react-native-view-shot": "^3.1.2",
+    "react-native-webview": "^11.4.3",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
