feat(stories): create stories page

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@adrianso/react-native-device-brightness": "^1.2.4",
     "@expo/react-native-action-sheet": "^3.9.0",
     "@gorhom/bottom-sheet": "^2",
+    "@gorhom/portal": "^1.0.4",
     "@kebetoo/camera-roll-picker": "^1.0.7",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/audio-toolkit": "^2.0.3",
@@ -39,7 +40,6 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "dayjs": "^1.10.4",
-    "emoji-datasource": "^6.0.1",
     "hermes-engine": "0.5.2-rc1",
     "react": "17.0.0",
     "react-native": "0.63.4",
@@ -50,6 +50,7 @@
     "react-native-convert-ph-asset": "^1.0.3",
     "react-native-device-info": "^8.0.7",
     "react-native-dotenv": "^2.5.3",
+    "react-native-easy-gestures": "^2.2.4",
     "react-native-fbsdk": "^1.1.2",
     "react-native-ffmpeg": "^0.5.1",
     "react-native-gesture-handler": "^1.6.1",
@@ -64,7 +65,7 @@
     "react-native-parsed-text": "^0.0.22",
     "react-native-permissions": "^3.0.1",
     "react-native-popover-view": "^3.1.1",
-    "react-native-push-notification": "^7.2.3",
+    "react-native-push-notification": "^7.3.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.4.0",
@@ -74,7 +75,6 @@
     "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-typography": "^1.4.1",
-    "react-native-ui-lib": "^5.14.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-video": "^5.1.1",
     "react-native-video-controls": "^2.7.1",
@@ -93,7 +93,6 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/runtime": "^7.9.2",
-    "@bam.tech/react-native-make": "^3.0.0",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
     "@react-native-community/eslint-config": "^1.0.0",
