--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.4.0",
+    "react-native-share": "^6.2.1",
     "react-native-share-menu": "^5.0.3",
     "react-native-snackbar": "^2.4.0",
     "react-native-sound": "^0.11.0",
@@ -98,7 +99,7 @@
     "@commitlint/config-conventional": "^8.3.4",
     "@react-native-community/eslint-config": "^1.0.0",
     "@testing-library/react-hooks": "^3.4.1",
-    "@welldone-software/why-did-you-render": "^4.2.5",
+    "@welldone-software/why-did-you-render": "^6.1.4",
     "babel-jest": "^25.3.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^5.16.0 || ^6.8.0",
@@ -116,6 +117,7 @@
     "react-native-testing-library": "^2.1.0",
     "react-native-version": "^4.0.0",
     "react-test-renderer": "16.11.0",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "why-did-you-render": "^1.0.1"
   }
 }
